--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -1,10 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Design Page</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous"
+    />
+    <title>Item Design Page</title>
+
+    <style>
+        .validationError {
+            color: red;
+        }
+    </style>
 </head>
 <body>
-Design page is under construction :/
+<div>
+    <h1>Add Item to Stock</h1>
+    <form method="post" th:object="${item}">
+        <div th:if="${#fields.hasErrors()}">
+            <span> Please correct the problems below and resubmit. </span>
+        </div>
+        <div>
+            <label for="itemName" class="form-label">Item name: </label>
+            <input
+                    type="text"
+                    class="form-control"
+                    id="itemName"
+                    th:field="*{name}"
+            />
+            <span
+                    class="validationError"
+                    th:if="${#fields.hasErrors('name')}"
+                    th:errors="*{name}"
+            >
+            Name error
+          </span>
+        </div>
+        <div>
+            <label for="year" class="form-label">Year Created: </label>
+            <input
+                    type="number"
+                    th:field="*{yearCreated}"
+                    class="form-control"
+                    id="year"
+            />
+            <span
+                    class="validationError"
+                    th:if="${#fields.hasErrors('yearCreated')}"
+                    th:errors="*{yearCreated}"
+            >
+            Year error
+          </span>
+        </div>
+        <div>
+            <label for="price" class="form-label">Price: </label>
+            <input
+                    type="number"
+                    th:field="*{price}"
+                    class="form-control"
+                    id="price"
+            />
+            <span
+                    class="validationError"
+                    th:if="${#fields.hasErrors('price')}"
+                    th:errors="*{price}"
+            >Price Error
+          </span>
+        </div>
+<!--        <select th:field="*{brandFrom}" class="form-select" aria-label="Brand Selection">-->
+<!--            <option th:each="Brand : ${brands}" th:value="${brand}" th:text="${brand.title}"></option>-->
+<!--        </select>-->
+        <button>Add Item</button>
+    </form>
+</div>
 </body>
 </html>
