--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,9 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>About Page</title>
-</head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous"
+    />
+<style>
+        .validationError {
+            color: red;
+        }
+        .design {
+            background-color: #1b1b1b;
+            color: white;
+            vertical-align: bottom;
+            height: 100%;
+        }
+        .tTitle {
+            color: #ffa31a;
+        }
+        button {
+            background-color: #ffa31a;
+            height: 50px;
+            width: 200px;
+            border-radius: 20px;
+            font-weight: bold;
+            margin-top: 20px;
+        }
+        input {
+            margin-top: 5px;
+            margin-bottom: 20px;
+        }
+        .topnav {
+          background-color: #333;
+          overflow: hidden;
+          width: 100%;
+        }
+        .topnav a {
+          float: left;
+          color: #ffa31a;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17px;
+          border-right: solid #1b1b1b;
+          font-weight: bold;
+        }
+        .topnav a:hover {
+          background-color: #ddd;
+          color: black;
+        }
+        .topnav a.active {
+          background-color: #04AA6D;
+          color: white;
+        }
+        </style>
+    <div class ="topnav">
+        <a th:href="@{/}">HOME</a>
+        <a th:href="@{/design}">DESIGN</a>
+        <a th:href="@{/itemList}">ITEM LIST</a>
+        <a th:href="@{/about}">ABOUT</a>
+    </div>
 <body>
 About page is under construction :/
 </body>
