--- a/src/main/resources/templates/itemList.html
+++ b/src/main/resources/templates/itemList.html
@@ -16,10 +16,9 @@
         .validationError {
             color: red;
         }
-        body {
+        .display {
             background-color: #1b1b1b;
             color: white;
-            display: table-cell;
             vertical-align: middle;
         }
         h5 {
@@ -46,10 +45,39 @@
         .card {
             border-width: 2px
         }
+        .topnav {
+          background-color: #333;
+          overflow: hidden;
+          width: 100%;
+        }
+        .topnav a {
+          float: left;
+          color: #ffa31a;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17px;
+          border-right: solid #1b1b1b;
+          font-weight: bold;
+        }
+        .topnav a:hover {
+          background-color: #ddd;
+          color: black;
+        }
+        .topnav a.active {
+          background-color: #04AA6D;
+          color: white;
+        }
     </style>
 
 </head>
-<body>
+<div class ="topnav">
+    <a th:href="@{/}">HOME</a>
+    <a th:href="@{/design}">DESIGN</a>
+    <a th:href="@{/itemList}">ITEM LIST</a>
+    <a th:href="@{/about}">ABOUT</a>
+</div>
+<body class="display">
 <div class="d-flex flex-row mb-3" style="margin-top:15px; margin-left:0px">
     <div
             class="card ms-3 me-3"
