--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -39,6 +39,7 @@
           background-color: #333;
           overflow: hidden;
           width: 100%;
+          border-bottom: solid #808080;
         }
         .topnav a {
           float: left;
@@ -47,19 +48,33 @@
           padding: 14px 16px;
           text-decoration: none;
           font-size: 17px;
-          border-right: solid #1b1b1b;
           font-weight: bold;
         }
         .topnav a:hover {
-          background-color: #ddd;
-          color: black;
+          background-color: #ffa31a;
+          color: #1b1b1b;
         }
         .topnav a.active {
           background-color: #04AA6D;
           color: white;
         }
+        .webTitle {
+          display: inline-block;
+          color: #ffa31a;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 17px;
+          font-weight: bold;
+          float: left;
+          border-right: solid #808080;
+          border-left: solid #808080;
+          display: flex;
+        }
         </style>
+    </head>
     <div class ="topnav">
+        <div class="webTitle"> Clothing Warehouse </div>
         <a th:href="@{/}">HOME</a>
         <a th:href="@{/design}">DESIGN</a>
         <a th:href="@{/itemList}">ITEM LIST</a>
