--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -74,6 +74,24 @@
           border-left: solid #808080;
           display: flex;
         }
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: #333;
+            color: #ffa31a;
+            padding: 20px;
+            text-align: center;
+            border-top: solid #808080;
+        }
+        .gitHubIcon{
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+            margin-left: auto;
+            float: right;
+        }
         </style>
 <div class ="topnav">
     <div class="webTitle"> Clothing Warehouse </div>
@@ -83,5 +101,11 @@
     <a th:href="@{/about}">ABOUT</a>
 </div>
 Home page is under construction :/
+<footer class="footer">
+    <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
+    <a href="https://github.com/SebastianMuzalewski/Clothing-Warehouse">
+        <img src="/images/pngs/Octicons-mark-github.svg.png" alt="GitHub" class="gitHubIcon">
+    </a>
+</footer>
 </body>
 </html>
