--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -72,6 +72,24 @@
           border-left: solid #808080;
           display: flex;
         }
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: #333;
+            color: #ffa31a;
+            padding: 20px;
+            text-align: center;
+            border-top: solid #808080;
+        }
+        .gitHubIcon{
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+            margin-left: auto;
+            float: right;
+        }
         </style>
 </head>
 <div class ="topnav">
@@ -152,5 +170,11 @@
     </form>
 </div>
 </div>
+<footer class="footer">
+    <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
+    <a href="https://github.com/SebastianMuzalewski/Clothing-Warehouse">
+        <img src="/images/pngs/Octicons-mark-github.svg.png" alt="GitHub" class="gitHubIcon">
+    </a>
+</footer>
 </body>
 </html>
