--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -173,7 +173,7 @@
 <footer class="footer">
     <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
     <a href="https://github.com/SebastianMuzalewski/Clothing-Warehouse">
-        <img src="/images/pngs/Octicons-mark-github.svg.png" alt="GitHub" class="gitHubIcon">
+        <img src="/images/pngs/github-icon.png" alt="GitHub" class="gitHubIcon">
     </a>
 </footer>
 </body>
