--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,8 +11,6 @@
             crossorigin="anonymous"
     />
     <title>Home Page</title>
-</head>
-<body>
 <style>
         .validationError {
             color: red;
@@ -93,13 +91,15 @@
             float: right;
         }
         </style>
-<div class ="topnav">
+</head>
+<div class="topnav">
     <div class="webTitle"> Clothing Warehouse </div>
     <a th:href="@{/}">HOME</a>
     <a th:href="@{/design}">DESIGN</a>
     <a th:href="@{/itemList}">ITEM LIST</a>
     <a th:href="@{/about}">ABOUT</a>
 </div>
+<body>
 Home page is under construction :/
 <footer class="footer">
     <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
