Fixed a bug in the navbar for home page

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -12,6 +12,9 @@
     />
     <title>About Page</title>
     <style>
+        html, body {
+             min-height: 100%;
+        }
         .design {
             background-color: #1b1b1b;
             color: white;
@@ -89,12 +92,13 @@
             justify-content: center;
             transform: translateY(-85%);
             position: absolute;
-            margin-right: 20px;
+            margin-right: 355px;
         }
         .description{
             font-size: 14px;
-            width: 400px;
-            margin: 50px;
+            width: 500px;
+            margin-top: 100px;
+            margin-left: 350px;
             color: #ffa31a;
         }
         .teamTitle{
