Adjusted the about page to look "Nicer"

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -80,8 +80,8 @@
             float: right;
         }
         .xqcDonoIcon{
-            width: 450px;
-            height: 400px;
+            width: 480px;
+            height: 365px;
             float: right;
             border: 5px solid orange;
             border-radius: 2%;
@@ -92,7 +92,7 @@
             justify-content: center;
             transform: translateY(-85%);
             position: absolute;
-            margin-right: 355px;
+            margin-right: 455px;
         }
         .description{
             font-size: 14px;
@@ -104,6 +104,7 @@
         .teamTitle{
             text-align: center;
             color: #ffa31a;
+            margin-top: 75px;
         }
         .imgContainer {
             display: flex;
@@ -162,6 +163,7 @@
     <p>Our dedicated team of designers and stylists work tirelessly to curate the latest fashion trends and bring them to your wardrobe. We take pride in our commitment to quality and customer satisfaction.</p>
     <p>Thank you for choosing Clothing Warehouse. We hope you enjoy your shopping experience and find the perfect outfits to express your unique style.</p>
 </section>
+<img src="/images/gifs/xqc-dono.gif" alt="GitHub" class="xqcDonoIcon">
     <h5 class="teamTitle"><u>Meet the team:</u></h5>
 <section class="imgContainer">
 <div class="gitSeb">
@@ -177,7 +179,6 @@
     <h5 class="name-display">EILAF</h5>
 </div>
 </section>
-<img src="/images/gifs/xqc-dono.gif" alt="GitHub" class="xqcDonoIcon">
 <footer class="footer">
     <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
     <a href="https://github.com/SebastianMuzalewski/Clothing-Warehouse">
