Added Content to the home page. For now, it's fine but in the future will add more if needed

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -108,19 +108,19 @@
         }
         .imgContainer {
             display: flex;
-            justify-content: center; /* Added to center the team member section */
+            justify-content: center;
         }
         .gitSeb {
             margin: 10px;
             display: flex;
-            flex-direction: column; /* Added to display h6 below h5 */
-            align-items: center; /* Added to center the elements horizontally */
+            flex-direction: column;
+            align-items: center;
         }
         .gitEilaf {
             margin: 10px;
             display: flex;
-            flex-direction: column; /* Added to display h6 below h5 */
-            align-items: center; /* Added to center the elements horizontally */
+            flex-direction: column;
+            align-items: center;
         }
         .gitSeb img {
             margin-right: 10px;
@@ -156,7 +156,7 @@
 </div>
 <body class="design">
 <section class="description">
-    <h1>Clothing Warehouse</u></h1>
+    <h1>Clothing Warehouse</h1>
     <p>Welcome to Clothing Warehouse, your one-stop destination for stylish and affordable clothing.</p>
     <p>Our mission is to provide high-quality clothing options for fashion enthusiasts at competitive prices. With a wide range of trendy styles, we cater to diverse tastes and preferences.</p>
     <p>At Clothing Warehouse, we believe that fashion should be accessible to everyone. That's why we offer an extensive collection of clothing items for men, women, and children, ensuring that there's something for everyone in the family.</p>
