--- a/src/main/resources/templates/itemList.html
+++ b/src/main/resources/templates/itemList.html
@@ -40,7 +40,7 @@
             margin-bottom: 20px;
         }
         .card-body{
-            background-color: #808080;
+            background-color: #333;
         }
         .card {
             border-width: 2px
@@ -126,7 +126,46 @@
             <h6 class="card-subtitle mb-2" th:text="|Year Created: ${item.yearCreated}"/>
         </div>
     </div>
+
 </div>
+
+<div class="d-flex flex-column bd-highlight justify-content-center align-items-center ms-5">
+    <form class="mt-3" method="post" th:action="@{/itemList}">
+        <div class="mb-3">
+            <label for="brand" class="form-label">Brand:</label>
+            <select id="brand" name="brand" class="form-control">
+                <option value="BALENCIAGA">Balenciaga</option>
+                <option value="STONE_ISLAND">Stone Island</option>
+                <option value="DIOR">Dior</option>
+            </select>
+        </div>
+        <div class="mb-3">
+            <label for="year" class="form-label">Year:</label>
+            <input type="number" id="year" name="year" class="form-control" min="2021" required />
+        </div>
+        <button type="submit">Search</button>
+    </form>
+    <div class="btn-group mt-3">
+        <form class="m-0" method="post" action="/itemList/">
+            <button name="sortBy" value="name">Sort by Name</button>
+            <button name="sortBy" value="price">Sort by Price</button>
+            <button name="sortBy" value="brand">Sort by Brand</button>
+        </form>
+    </div>
+    <ul class="pagination mt-5">
+        <li class="page-item">
+            <a class="page-link" th:href="@{/itemList/switchPage(pageToSwitch=${currentPage - 1}, sortBy=${(param.sortBy != null) ? param.sortBy : ''})}">Previous</a>
+        </li>
+        <li th:classappend="${currentPage + 1 eq page} ? 'active' : 'not'" th:each="page: ${#numbers.sequence(1, totalPages)}" class="page-item">
+            <a class="page-link" th:text="${page}" th:href="@{/itemList/switchPage(pageToSwitch=${page - 1}, sortBy=${(param.sortBy != null) ? param.sortBy : ''})}" />
+        </li>
+        <li class="page-item">
+            <a class="page-link" th:href="@{/itemList/switchPage(pageToSwitch=${currentPage + 1}, sortBy=${(param.sortBy != null) ? param.sortBy : ''})}">Next</a>
+        </li>
+    </ul>
+    </nav>
+</div>
+
 <footer class="footer">
     <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
     <a href="https://github.com/SebastianMuzalewski/Clothing-Warehouse">
