--- a/src/main/resources/templates/itemList.html
+++ b/src/main/resources/templates/itemList.html
@@ -99,6 +99,22 @@
             margin-left: auto;
             float: right;
         }
+        .page-link {
+            color: #000000;
+            font-weight: bold;
+            border: 2px solid #808080;
+            background-color: #ffa31a;
+        }
+        .page-link:hover {
+            color: #ffa31a;
+            background-color: #1b1b1b;
+            border-color: #ffa31a;
+        }
+        .active .page-link {
+            color: #000000;
+            background-color: #FFFFFF;
+            border: 2px solid #808080;
+        }
         </style>
 </head>
 <div class ="topnav">
