--- a/src/main/resources/templates/itemList.html
+++ b/src/main/resources/templates/itemList.html
@@ -1,57 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <title>Item List</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous"
-    />
-    <title>Items List</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
     <style>
-        .validationError {
-            color: red;
-        }
-        .display {
-            background-color: #1b1b1b;
-            color: white;
-            vertical-align: middle;
-        }
-        h5 {
-            color: #ffa31a;
-        }
-        .card-subtitle {
-            color: #ffa31a;
-        }
-        button {
-            background-color: #ffa31a;
-            height: 50px;
-            width: 200px;
-            border-radius: 20px;
-            font-weight: bold;
-            margin-top: 20px;
-        }
-        input {
-            margin-top: 5px;
-            margin-bottom: 20px;
-        }
-        .card-body{
-            background-color: #333;
-        }
-        .card {
-            border-width: 2px
-        }
-        .topnav {
+        /***** Nav-Bar *****/
+        .nav-bar {
           background-color: #333;
           overflow: hidden;
           width: 100%;
           border-bottom: solid #808080;
         }
-        .topnav a {
+        .nav-bar a {
           float: left;
           color: #ffa31a;
           text-align: center;
@@ -60,15 +23,15 @@
           font-size: 17px;
           font-weight: bold;
         }
-        .topnav a:hover {
+        .nav-bar a:hover {
           background-color: #ffa31a;
           color: #1b1b1b;
         }
-        .topnav a.active {
+        .nav-bar a.active {
           background-color: #04AA6D;
           color: white;
         }
-        .webTitle {
+        .nav-title {
           display: inline-block;
           color: #ffa31a;
           text-align: center;
@@ -81,7 +44,8 @@
           border-left: solid #808080;
           display: flex;
         }
-        .footer {
+        /***** Footer *****/
+        .footer-config {
             position: fixed;
             left: 0;
             bottom: 0;
@@ -99,6 +63,42 @@
             margin-left: auto;
             float: right;
         }
+        /***** Error *****/
+        .validationError {
+            color: red;
+        }
+        /***** Page Background *****/
+        .page-display {
+            background-color: #1b1b1b;
+            color: white;
+            vertical-align: middle;
+        }
+        /***** Card Display *****/
+        .card-title {
+            color: #ffa31a;
+        }
+        .card-subtitle {
+            color: #ffa31a;
+        }
+        .card-body{
+            background-color: #333;
+        }
+        .card {
+            border-width: 2px
+        }
+        /***** Functionality *****/
+        button {
+            background-color: #ffa31a;
+            height: 50px;
+            width: 200px;
+            border-radius: 20px;
+            font-weight: bold;
+            margin-top: 20px;
+        }
+        input {
+            margin-top: 5px;
+            margin-bottom: 20px;
+        }
         .page-link {
             color: #000000;
             font-weight: bold;
@@ -115,78 +115,69 @@
             background-color: #FFFFFF;
             border: 2px solid #808080;
         }
-        </style>
+    </style>
 </head>
-<div class ="topnav">
-    <div class="webTitle"> Clothing Warehouse </div>
-    <a th:href="@{/}">HOME</a>
-    <a th:href="@{/design}">DESIGN</a>
-    <a th:href="@{/itemList}">ITEM LIST</a>
-    <a th:href="@{/about}">ABOUT</a>
-</div>
-<body class="display">
-<div class="d-flex flex-row mb-3" style="margin-top:15px; margin-left:0px">
-    <div
-            class="card ms-3 me-3"
-            th:each="item: ${items}"
-            style="width: 18rem, height: 18rem"
-    >
 
-        <div class="card-body">
-            <h5 class="card-title" th:text="${item.name}" />
+    <div class ="nav-bar">
+        <div class="nav-title"> Clothing Warehouse </div>
+        <a th:href="@{/}">HOME</a>
+        <a th:href="@{/design}">DESIGN</a>
+        <a th:href="@{/itemList}">ITEM LIST</a>
+        <a th:href="@{/about}">ABOUT</a>
+    </div>
 
-            <h6 class="card-subtitle mb-2" th:text="|Price: $${item.price} CAD|"/>
-
-            <h6 class="card-subtitle mb-2" th:text="|Brand: ${item.brandFrom}|"/>
-
-            <h6 class="card-subtitle mb-2" th:text="|Year Created: ${item.yearCreated}"/>
+<body class="page-display">
+    <div class="d-flex flex-row mb-3" style="margin-top:15px; margin-left:0px">
+        <div class="card ms-3 me-3" th:each="item: ${items}" style="width: 18rem, height: 18rem">
+            <div class="card-body">
+                <h5 class="card-title" th:text="${item.name}"></h5>
+                <h6 class="card-subtitle mb-2" th:text="|Price: $${item.price} CAD|"></h6>
+                <h6 class="card-subtitle mb-2" th:text="|Brand: ${item.brandFrom}|"></h6>
+                <h6 class="card-subtitle mb-2" th:text="|Year Created: ${item.yearCreated}"></h6>
+            </div>
         </div>
     </div>
 
-</div>
-
-<div class="d-flex flex-column bd-highlight justify-content-center align-items-center ms-5">
-    <form class="mt-3" method="post" th:action="@{/itemList}">
-        <div class="mb-3">
-            <label for="brand" class="form-label">Brand:</label>
-            <select id="brand" name="brand" class="form-control">
-                <option value="BALENCIAGA">Balenciaga</option>
-                <option value="STONE_ISLAND">Stone Island</option>
-                <option value="DIOR">Dior</option>
-            </select>
-        </div>
-        <div class="mb-3">
-            <label for="year" class="form-label">Year:</label>
-            <input type="number" id="year" name="year" class="form-control" min="2021" required />
-        </div>
-        <button type="submit">Search</button>
-    </form>
-    <div class="btn-group mt-3">
-        <form class="m-0" method="post" action="/itemList/">
-            <button name="sortBy" value="name">Sort by Name</button>
-            <button name="sortBy" value="price">Sort by Price</button>
-            <button name="sortBy" value="brand">Sort by Brand</button>
+    <div class="d-flex flex-column bd-highlight justify-content-center align-items-center ms-5">
+        <form class="mt-3" method="post" th:action="@{/itemList}">
+            <div class="mb-3">
+                <label for="brand" class="form-label">Brand:</label>
+                <select id="brand" name="brand" class="form-control">
+                    <option value="BALENCIAGA">Balenciaga</option>
+                    <option value="STONE_ISLAND">Stone Island</option>
+                    <option value="DIOR">Dior</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="year" class="form-label">Year:</label>
+                <input type="number" id="year" name="year" class="form-control" min="2021" required />
+            </div>
+            <button type="submit">Search</button>
         </form>
+        <div class="btn-group mt-3">
+            <form class="m-0" method="post" action="/itemList">
+                <button name="sortBy" value="name">Sort by Name</button>
+                <button name="sortBy" value="price">Sort by Price</button>
+                <button name="sortBy" value="brand">Sort by Brand</button>
+            </form>
+        </div>
+        <ul class="pagination mt-5">
+            <li class="page-item">
+                <a class="page-link" th:href="@{/itemList/switchPage(pageToSwitch=${currentPage - 1}, sortBy=${(param.sortBy != null) ? param.sortBy : ''})}">Previous</a>
+            </li>
+            <li th:classappend="${currentPage + 1 eq page} ? 'active' : 'not'" th:each="page: ${#numbers.sequence(1, totalPages)}" class="page-item">
+                <a class="page-link" th:text="${page}" th:href="@{/itemList/switchPage(pageToSwitch=${page - 1}, sortBy=${(param.sortBy != null) ? param.sortBy : ''})}"></a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" th:href="@{/itemList/switchPage(pageToSwitch=${currentPage + 1}, sortBy=${(param.sortBy != null) ? param.sortBy : ''})}">Next</a>
+            </li>
+        </ul>
     </div>
-    <ul class="pagination mt-5">
-        <li class="page-item">
-            <a class="page-link" th:href="@{/itemList/switchPage(pageToSwitch=${currentPage - 1}, sortBy=${(param.sortBy != null) ? param.sortBy : ''})}">Previous</a>
-        </li>
-        <li th:classappend="${currentPage + 1 eq page} ? 'active' : 'not'" th:each="page: ${#numbers.sequence(1, totalPages)}" class="page-item">
-            <a class="page-link" th:text="${page}" th:href="@{/itemList/switchPage(pageToSwitch=${page - 1}, sortBy=${(param.sortBy != null) ? param.sortBy : ''})}" />
-        </li>
-        <li class="page-item">
-            <a class="page-link" th:href="@{/itemList/switchPage(pageToSwitch=${currentPage + 1}, sortBy=${(param.sortBy != null) ? param.sortBy : ''})}">Next</a>
-        </li>
-    </ul>
-    </nav>
-</div>
-
-<footer class="footer">
-    <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
-    <a href="https://github.com/SebastianMuzalewski/Clothing-Warehouse">
-        <img src="/images/pngs/github-icon.png" alt="GitHub" class="gitHubIcon">
-    </a>
-</footer>
-</body>
+        <footer class="footer-config">
+            <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
+            <a href="https://github.com/SebastianMuzalewski/Clothing-Warehouse">
+                <img src="/images/pngs/github-icon.png" alt="GitHub" class="gitHubIcon">
+            </a>
+        </footer>
+    </body>
 </html>
