--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -56,7 +56,7 @@
             text-align: center;
             border-top: solid #808080;
         }
-        .gitHubIcon{
+        .gitHub-icon{
             width: 20px;
             height: 20px;
             margin-right: 10px;
@@ -179,7 +179,7 @@
         <footer class="footer-config">
             <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
             <a href="https://github.com/SebastianMuzalewski/Clothing-Warehouse">
-                <img src="/images/pngs/github-icon.png" alt="GitHub" class="gitHubIcon">
+                <img src="/images/pngs/github-icon.png" alt="GitHub" class="gitHub-icon">
             </a>
         </footer>
     </body>
