--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -1,48 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <title>Design Page</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-            crossorigin="anonymous"
-    />
-    <title>Design Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
     <style>
-        .validationError {
-            color: red;
-        }
-        .design {
-            background-color: #1b1b1b;
-            color: white;
-            vertical-align: bottom;
-            height: 100%;
-        }
-        .tTitle {
-            color: #ffa31a;
-        }
-        button {
-            background-color: #ffa31a;
-            height: 50px;
-            width: 200px;
-            border-radius: 20px;
-            font-weight: bold;
-            margin-top: 20px;
-        }
-        input {
-            margin-top: 5px;
-            margin-bottom: 20px;
-        }
-        .topnav {
+        /***** Nav-Bar *****/
+        .nav-bar {
           background-color: #333;
           overflow: hidden;
           width: 100%;
           border-bottom: solid #808080;
         }
-        .topnav a {
+        .nav-bar a {
           float: left;
           color: #ffa31a;
           text-align: center;
@@ -51,15 +23,15 @@
           font-size: 17px;
           font-weight: bold;
         }
-        .topnav a:hover {
+        .nav-bar a:hover {
           background-color: #ffa31a;
           color: #1b1b1b;
         }
-        .topnav a.active {
+        .nav-bar a.active {
           background-color: #04AA6D;
           color: white;
         }
-        .webTitle {
+        .nav-title {
           display: inline-block;
           color: #ffa31a;
           text-align: center;
@@ -72,7 +44,8 @@
           border-left: solid #808080;
           display: flex;
         }
-        .footer {
+        /***** Footer *****/
+        .footer-config {
             position: fixed;
             left: 0;
             bottom: 0;
@@ -83,98 +56,89 @@
             text-align: center;
             border-top: solid #808080;
         }
-        .gitHubIcon{
+        .gitHub-icon{
             width: 20px;
             height: 20px;
             margin-right: 10px;
             margin-left: auto;
             float: right;
         }
-        </style>
+        /***** Error *****/
+        .validationError {
+            color: red;
+        }
+        /***** Page Background *****/
+        .page-display {
+                background-color: #1b1b1b;
+                color: white;
+                vertical-align: bottom;
+                height: 100%;
+        }
+        /***** Functionality *****/
+        button {
+            background-color: #ffa31a;
+            height: 50px;
+            width: 200px;
+            border-radius: 20px;
+            font-weight: bold;
+            margin-top: 20px;
+        }
+        input {
+            margin-top: 5px;
+            margin-bottom: 20px;
+        }
+        /***** Titles *****/
+        .page-title {
+            color: #ffa31a;
+        }
+    </style>
 </head>
-<div class ="topnav">
-    <div class="webTitle"> Clothing Warehouse </div>
-    <a th:href="@{/}">HOME</a>
-    <a th:href="@{/design}">DESIGN</a>
-    <a th:href="@{/itemList}">ITEM LIST</a>
-    <a th:href="@{/about}">ABOUT</a>
-</div>
-<body class="design">
-<div class="d-flex align-items-center justify-content-center py-5">
-<div>
-    <h1 class ="tTitle">Add Item to Stock</h1>
-    <form method="post" th:object="${item}">
-        <div th:if="${#fields.hasErrors()}">
-            <span> Please correct the problems below and resubmit. </span>
-        </div>
+
+    <div class ="nav-bar">
+        <div class="nav-title"> Clothing Warehouse </div>
+        <a th:href="@{/}">HOME</a>
+        <a th:href="@{/design}">DESIGN</a>
+        <a th:href="@{/itemList}">ITEM LIST</a>
+        <a th:href="@{/about}">ABOUT</a>
+    </div>
+
+<body class="page-display">
+    <div class="d-flex align-items-center justify-content-center py-5">
         <div>
-            <label for="itemName" class="form-label">Item name: </label>
-            <input
-                    type="text"
-                    class="form-control"
-                    id="itemName"
-                    th:field="*{name}"
-            />
-            <span
-                    class="validationError"
-                    th:if="${#fields.hasErrors('name')}"
-                    th:errors="*{name}"
-            >
-            Name error
-          </span>
+            <h1 class ="page-title">Add Item to Stock</h1>
+            <form method="post" th:object="${item}">
+                <div th:if="${#fields.hasErrors()}">
+                    <span> Please correct the problems below and resubmit. </span>
+                </div>
+                <div>
+                    <label for="itemName" class="form-label">Item name: </label>
+                    <input type="text" class="form-control" id="itemName" th:field="*{name}"/>
+                    <span class="validationError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"> Name error </span>
+                </div>
+                <div>
+                    <label for="year" class="form-label">Year Created: </label>
+                    <input type="number" th:field="*{yearCreated}" class="form-control" id="year"/>
+                    <span class="validationError" th:if="${#fields.hasErrors('yearCreated')}" th:errors="*{yearCreated}"> Year error </span>
+                </div>
+                <div>
+                    <label for="price" class="form-label">Price: </label>
+                    <input type="number" th:field="*{price}" class="form-control" id="price"/>
+                    <span class="validationError" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"> Price Error </span>
+                </div>
+                    <label>Choose a brand:</label>
+                    <select th:field="*{brandFrom}" class="form-select mt-5 mb-5">
+                    <option th:each="brand: ${brands}" th:value="${brand}" th:text="${brand.title}"></option>
+                    </select>
+                    <br>
+                    <button>Add Item</button>
+             </form>
         </div>
-        <div>
-            <label for="year" class="form-label">Year Created: </label>
-            <input
-                    type="number"
-                    th:field="*{yearCreated}"
-                    class="form-control"
-                    id="year"
-            />
-            <span
-                    class="validationError"
-                    th:if="${#fields.hasErrors('yearCreated')}"
-                    th:errors="*{yearCreated}"
-            >
-            Year error
-          </span>
-        </div>
-        <div>
-            <label for="price" class="form-label">Price: </label>
-            <input
-                    type="number"
-                    th:field="*{price}"
-                    class="form-control"
-                    id="price"
-            />
-            <span
-                    class="validationError"
-                    th:if="${#fields.hasErrors('price')}"
-                    th:errors="*{price}"
-            >Price Error
-          </span>
-        </div>
-        <label>Choose a brand:</label>
-        <select
-                th:field="*{brandFrom}"
-                class="form-select mt-5 mb-5"
-        >
-            <option
-                    th:each="brand: ${brands}"
-                    th:value="${brand}"
-                    th:text="${brand.title}"
-            />
-        </select>
-        <br>
-        <button>Add Item</button>
-    </form>
-</div>
-</div>
-<footer class="footer">
-    <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
-    <a href="https://github.com/SebastianMuzalewski/Clothing-Warehouse">
-        <img src="/images/pngs/github-icon.png" alt="GitHub" class="gitHubIcon">
-    </a>
-</footer>
-</body>
+    </div>
+        <footer class="footer-config">
+            <p>&copy;2023 Clothing Warehouse. All rights reserved lol.</p>
+            <a href="https://github.com/SebastianMuzalewski/Clothing-Warehouse">
+                <img src="/images/pngs/github-icon.png" alt="GitHub" class="gitHub-icon">
+            </a>
+        </footer>
+    </body>
 </html>
